# sokrates

./: .gitignore  README.md  agentic-git-history-module-plan.md  buildspec.yml  mise.toml  pom.xml  rust-tree-sitter-reimplementation-plan.md
rust-core/: Cargo.toml
rust-core/fixtures/java-dependencies-sample/goldens/: analysisResults.json  concerns.json  dependencies.json  duplicates.json  logical_decompositions.json  mainFiles.json  mainFilesPaths.json
rust-core/fixtures/java-dependencies-sample/input/: pom.xml
rust-core/fixtures/java-units-sample/goldens/: analysisResults.json  buildAndDeploymentFiles.json  buildAndDeploymentFilesPaths.json  concerns.json  duplicates.json  mainFiles.json  mainFilesPaths.json  units.json
rust-core/fixtures/java-units-sample/input/: pom.xml
rust-core/fixtures/sample-repo/goldens/: analysisResults.json  concerns.json  duplicates.json  otherFiles.json  otherFilesPaths.json
rust-core/fixtures/sample-repo/input/: pom.xml
rust-core/sokrates-cli/: Cargo.toml
rust-core/sokrates-cli/src/: compat.rs  lib.rs  main.rs
rust-core/sokrates-ir/: Cargo.toml
rust-core/sokrates-ir/src/: lib.rs
rust-core/sokrates-lang-java/: Cargo.toml
rust-core/sokrates-lang-java/src/: lib.rs
rust-core/sokrates-parity/: Cargo.toml
rust-core/sokrates-parity/src/: lib.rs
rust-core/sokrates-parity/tests/: compat_export_parity.rs  java_dependencies_parity.rs  java_file_metrics_parity.rs  java_units_parity.rs  sample_repo_parity.rs
rust-core/sokrates-ts-core/: Cargo.toml
rust-core/sokrates-ts-core/src/: lib.rs
(+80 files in other folders)
