[workspace]
members = ["sokrates-cli", "sokrates-ir", "sokrates-lang-java", "sokrates-parity", "sokrates-ts-core"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.50", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
streaming-iterator = "0.1.9"
tree-sitter = "0.26.8"
tree-sitter-java = "0.23.5"
walkdir = "2.5.0"
zip = "0.6.6"
